--- a/Week-01-Pandas/Exercise-ZF.ipynb
+++ b/Week-01-Pandas/Exercise-ZF.ipynb
@@ -9,11 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zack and Georgios are the goats\n"
+     ]
+    }
+   ],
    "source": [
     "# In this cell print your name \n",
+    "print ('Zack and Georgios are the goats')\n",
     "\n"
    ]
   },
@@ -369,7 +378,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
