--- a/Week-01-Pandas/Exercise-ZF.ipynb
+++ b/Week-01-Pandas/Exercise-ZF.ipynb
@@ -57,7 +57,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load data here\n"
+    "# Load data here\n",
+    "df = pd.read_csv('data/listings.csv')\n",
+    "df.head()"
    ]
   },
   {
@@ -94,7 +96,11 @@
    "outputs": [],
    "source": [
     "# 1. How many listings are there with a price less than 100? \n",
+    "condition1 = df['price'] < 100\n",
     "\n",
+    "newListings = df[condition1]\n",
+    "\n",
+    "newListings\n",
     "\n"
    ]
   },
@@ -106,7 +112,10 @@
    "source": [
     "# 2. Make a new DataFrame of listings in Brooklyn named `df_bk` \n",
     "# and find how many listings in just Brooklyn.\n",
-    "\n"
+    "condition2 = df['neighbourhood_group'] == 'Brooklyn'\n",
+    "\n",
+    "df_bk = df[condition2]\n",
+    "df_bk\n"
    ]
   },
   {
@@ -116,7 +125,8 @@
    "outputs": [],
    "source": [
     "# 3. Find how many listings there are in Brooklyn with a price less than 100.\n",
-    "\n",
+    "brook_100 = df[condition2 & condition1]\n",
+    "brook_100\n",
     "\n"
    ]
   },
@@ -128,7 +138,11 @@
    "source": [
     "# 4. Using `.isin()` select anyone that has the host name of Michael, David, John, and Daniel.\n",
     "# How many total are there that have those names\n",
-    "\n"
+    "names = ['Micheal', 'David', 'John', 'Daniel']\n",
+    "\n",
+    "namesCondtion = df['host_name'].isin(names)\n",
+    "\n",
+    "df[namesCondtion]['host_name'].value_counts()\n"
    ]
   },
   {
@@ -139,7 +153,21 @@
    "source": [
     "# 5. Create a new column called `adjusted_price` that has $100 added to every listing in Williamsburg.  \n",
     "# The prices for all other listings should be the same as the were before. \n",
-    "\n"
+    "condition1 = df['neighbourhood'] == \"Williamsburg\"\n",
+    "def price_change(row):\n",
+    "    if row['neighbourhood'] == 'Williamsburg':   \n",
+    "        return row['price'] + 100\n",
+    "    else:\n",
+    "        return row['price']\n",
+    "\n",
+    "df['adjusted_price'] = df.apply(price_change, axis=1)\n",
+    "\n",
+    " \n",
+    "\n",
+    "df[condition1]\n",
+    "\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
@@ -149,8 +177,13 @@
    "outputs": [],
    "source": [
     "# 6. What % of the rooms are private, and what % of the rooms are shared.  \n",
+    "condition1 = df['room_type'] == \"Private\"\n",
+    "condition2 = df['room_type'] == \"Shared\"\n",
     "\n",
-    "\n",
+    "perc_private = (len(df[condition1]) / len(df)) * 100\n",
+    "perc_shared = (len(df[condition2]) / len(df)) * 100\n",
+    "print(f\"The percentage of private rooms are: {perc_private}%\")\n",
+    "print(f\"The percentage of shared rooms are: {perc_shared}%\")\n",
     "\n"
    ]
   },
@@ -182,7 +215,8 @@
    "outputs": [],
    "source": [
     "# 1. Using `groupby`, count how many listings are in each neighbourhood_group.\n",
-    "\n",
+    "grouped = df.groupby('neighbourhood_group')\n",
+    "grouped['neighbourhood_group'].value_counts()\n",
     "\n"
    ]
   },
@@ -193,7 +227,7 @@
    "outputs": [],
    "source": [
     "# 2. Using `groupby`, find the mean price for each of the neighbourhood_groups. \n",
-    "\n",
+    "grouped['price'].mean()\n",
     "\n"
    ]
   },
@@ -203,7 +237,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2.5. Using `groupby`, find the mean price for each room_type. \n"
+    "# 2.5. Using `groupby`, find the mean price for each room_type. \n",
+    "grouped = df.groupby('room_type')\n",
+    "grouped['price'].mean()"
    ]
   },
   {
@@ -213,7 +249,8 @@
    "outputs": [],
    "source": [
     "# 3. Using `groupby` and `.agg()`, find the min and max price for each of the neighbourhood_groups. \n",
-    "\n",
+    "grouped = df.groupby('neighbourhood_group')\n",
+    "grouped['price'].agg(['min', 'max'])\n",
     "\n"
    ]
   },
@@ -224,7 +261,9 @@
    "outputs": [],
    "source": [
     "# 4. Using `groupby`, find the mean price for each room_type in each neighbourhood_group.\n",
-    "\n"
+    "group_cols = ['room_type', 'neighbourhood_group']\n",
+    "grouped = df.groupby(group_cols)\n",
+    "grouped['price'].mean()\n"
    ]
   },
   {
@@ -235,7 +274,10 @@
    "source": [
     "# 5. Using `groupby` and `.agg()`, find the count, min, max, mean, median, and std of the prices \n",
     "# for each room type in each neighbourhood_group.\n",
+    "group_cols = ['room_type', 'neighbourhood_group']\n",
+    "grouped = df.groupby(group_cols)\n",
     "\n",
+    "grouped['price'].agg(['count', 'min', 'max', 'mean', 'median', 'std'])\n",
     "\n",
     "\n"
    ]
@@ -265,7 +307,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1. Load the `prices.csv` and the `n_listings.csv`"
+    "# 1. Load the `prices.csv` and the `n_listings.csv`\n",
+    "price = pd.read_csv('data/prices.csv')\n",
+    "\n",
+    "listings = pd.read_csv('data/n_listings.csv', sep=';')"
    ]
   },
   {
@@ -275,7 +320,7 @@
    "outputs": [],
    "source": [
     "# 2. Do join that keeps all the records for each table.\n",
-    "\n",
+    "joined = pd.merge(price, listings, on=\"neighbourhood_group\", how=\"outer\")\n",
     "\n"
    ]
   },
@@ -285,7 +330,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Save your joined csv as `joined.csv` into the data folder. "
+    "# 3. Save your joined csv as `joined.csv` into the data folder. \n",
+    "save_as = \"data/joined.csv\"\n",
+    "joined.to_csv(save_as, index=False)"
    ]
   },
   {
@@ -294,7 +341,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Load your newly saved file, see if it looks the same.  If not, try saving with argument `index=False`"
+    "# 4. Load your newly saved file, see if it looks the same.  If not, try saving with argument `index=False`\n",
+    "file2 = pd.read_csv(\"data/joined.csv\")\n",
+    "file2"
    ]
   },
   {
