--- a/Week-02-DS-Overview-and-Data/ExerciseWK2-ZF.ipynb
+++ b/Week-02-DS-Overview-and-Data/ExerciseWK2-ZF.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "[5 rows x 61 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
        "[125 rows x 61 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "Length: 61, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -813,12 +813,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Count ‘em.\n",
-    "\n"
+    "total_nans = df_food.isna().sum().sum()\n",
+    "total_nans\n"
    ]
   },
   {
@@ -830,24 +842,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>calories_day</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>I'm not answering this.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Not sure, 240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>135</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>104 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "21"
+       "     Gender  calories_day                    weight\n",
+       "1         1           3.0                       155\n",
+       "2         1           4.0  I'm not answering this. \n",
+       "3         1           3.0             Not sure, 240\n",
+       "4         1           2.0                       190\n",
+       "5         1           3.0                       190\n",
+       "..      ...           ...                       ...\n",
+       "118       1           3.0                       140\n",
+       "119       2           3.0                       185\n",
+       "120       1           4.0                       156\n",
+       "121       1           2.0                       180\n",
+       "123       2           4.0                       135\n",
+       "\n",
+       "[104 rows x 3 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Drop ‘em.\n",
-    "total_nans = df_food.isna().sum().sum()\n",
-    "total_nans\n"
+    "df_food = df_food.dropna()\n",
+    "\n",
+    "df_food\n"
    ]
   },
   {
@@ -863,9 +985,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>calories_day</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>190.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>190.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>137.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>118</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>140.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>119</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>185.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120</th>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>180.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>135.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>101 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Gender  calories_day  weight\n",
+       "1         1           3.0   155.0\n",
+       "4         1           2.0   190.0\n",
+       "5         1           3.0   190.0\n",
+       "6         2           3.0   180.0\n",
+       "7         1           3.0   137.0\n",
+       "..      ...           ...     ...\n",
+       "118       1           3.0   140.0\n",
+       "119       2           3.0   185.0\n",
+       "120       1           4.0   156.0\n",
+       "121       1           2.0   180.0\n",
+       "123       2           4.0   135.0\n",
+       "\n",
+       "[101 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Fix that.\n",
     "df_food['weight'] = pd.to_numeric(df_food['weight'], errors='coerce')\n",
@@ -887,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -911,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1633,7 @@
        "[28062 rows x 18 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1436,7 +1678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1733,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1537,7 +1779,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1588,7 +1830,7 @@
        "Name: count, Length: 1219, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1607,7 +1849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1805,7 +2047,7 @@
        "46       Woman  White  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1825,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2286,7 @@
        "47    College degree  Woman  White  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2085,7 +2327,7 @@
        "Name: count, Length: 76, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2113,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2158,7 +2400,7 @@
        "Name: count, Length: 76, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2177,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2187,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2205,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2239,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2256,7 +2498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
